--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <h1>Hello Worlds!</h1>
-  </body>
-</html>
+---
+layout: default
+title: David Lester's Files
+stylesheets:
+  - index
+---
+<main>
+    {% include document_list.html name="About" document_type="about" %}
+    {% include document_list.html name="Biographical Studies" document_type="biographical-studies" %}
+    {% include document_list.html name="Crisis Intervention" document_type="crisis-intervention" %}
+    {% include document_list.html name="Essays Suicidology" document_type="essays-suicidology" %}
+    {% include document_list.html name="John Connolly Interviews" document_type="john-connolly-interviews" %}
+    {% include document_list.html name="Suicide Studies" document_type="suicide-studies" %}
+</main>
