Remove text in current page topic pages

--- a/_pages/document-types/crisis-intervention.html
+++ b/_pages/document-types/crisis-intervention.html
@@ -1,7 +1,7 @@
 ---
 layout: document_type
 title: Crisis Intervention Documents
+document_type_name: Crisis Intervention
 document_type: crisis-intervention
 permalink: /document-types/crisis-intervention
 ---
-<p>Example text</p>
