--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ stylesheets:
     {% include document_list.html name="About" document_type="about" %}
     {% include document_list.html name="Biographical Studies" document_type="biographical-studies" %}
     {% include document_list.html name="Crisis Intervention" document_type="crisis-intervention" %}
+    {% include document_list.html name="Encyclopedia of Personality" document_type="encyclopedia-of-personality" %}
     {% include document_list.html name="Essays Suicidology" document_type="essays-suicidology" %}
     {% include document_list.html name="John Connolly Interviews" document_type="john-connolly-interviews" %}
     {% include document_list.html name="Suicide Studies" document_type="suicide-studies" %}
